# hack-coins

./: .gitignore  LICENSE  README.md  application.py  captain-definition  config.json  main.py  pyproject.toml  qrgen.py  requirements.txt
templates/: adminlogin.html  generate.html  qrcode.html
