[tool.poetry]
name = "hack-coins"
version = "0.1.0"
description = ""
authors = ["harbar20 <harbar2021@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
qrcode = "^6.1"
flask = "^1.1.2"
uuid = "^1.30"
requests = "^2.24.0"
airtable-python-wrapper = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
